--- a/index.html
+++ b/index.html
@@ -13,31 +13,36 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
-    <header>
-        <nav>
+    <header class="header">
+        <div class="container header-container">
+        <nav class="navigation">
             <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-            <ul>
+            <ul class="nav-list">
                 <li><a class="nav-link" href="./index.html">Studio</a></li>
                 <li><a class="nav-link" href="">Portfolio</a></li>
                 <li><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
-        <ul>
+        <ul class="address-list">
             <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
         </address>
+        </div>
     </header>
 
     <main>
         <section class="solution">
+            <div class="container">
             <h1 class="solution-title">Effective Solutions for Your Business</h1>
             <button class="solution-button" type="button">Order Service</button>
         </section>
+
         <section>
-            <h2 hidden>Topics</h2>
+            <h2 class="visually-hidden">Topics</h2>
             <ul class="topics-menu">
                 <li class="topics-menu-list">
                     <h3 class="topics-title">Strategy</h3>
@@ -56,8 +61,11 @@
                     <p class="topics-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
+            </div>
         </section>
+
         <section class="team">
+            <div class="container">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-menu">
                 <li class="team-list-item">
@@ -81,8 +89,11 @@
                     <p class="team-text">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
+
         <section>
+            <div class="container">
         <h2 class="portfolio">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-list-item">
@@ -116,12 +127,15 @@
             <p class="portfolio-list-text">Marketing</p>
             </li>
         </ul> 
+        </div>
         </section>
     </main>
 
     <footer class="foot">
-        <a class="logo" href="./index.html">Web<span class="logo-part-foot">Studio</span></a>
+        <div class="container">
+        <a class="logo-footer" href="./index.html">Web<span class="logo-part-foot">Studio</span></a>
         <p class="foot-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 </html>
