--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" />      
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -41,7 +40,7 @@
             <button class="solution-button" type="button">Order Service</button>
         </section>
 
-        <section>
+        <section class="topics">
             <h2 class="visually-hidden">Topics</h2>
             <ul class="topics-menu">
                 <li class="topics-menu-list">
@@ -70,61 +69,81 @@
             <ul class="team-menu">
                 <li class="team-list-item">
                     <img class="team-image" src="./images/img-1.jpg" alt="Mark Guerrero" width="264" height="260">
+                    <div class="team-info">
                     <h3 class="team-name">Mark Guerrero</h3>
                     <p class="team-text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-list-item">
                     <img class="team-image" src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
+                    <div class="team-info">
                     <h3 class="team-name">Tom Ford</h3>
                     <p class="team-text">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-list-item">
                     <img class="team-image" src="./images/img-3.jpg" alt="Camila Garcia" width="264" height="260">
+                    <div class="team-info">
                     <h3 class="team-name">Camila Garcia</h3>
                     <p class="team-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-list-item">
                     <img class="team-image" src="./images/img-4.jpg" alt="Daniel Wilson" width="264" height="260">
+                    <div class="team-info">
                     <h3 class="team-name">Daniel Wilson</h3>
                     <p class="team-text">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
         </section>
 
-        <section>
-            <div class="container">
+        <section class="container-portfolio">
+        <div class="container portfolio-class">
         <h2 class="portfolio">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-list-item">
             <img class="portfolio-list-image" src="./images/img-5.jpg" alt="Banking App" width="360" height="300">
+            <div class="portfolio-st">
             <h3 class="portfolio-list-title">Banking App</h3>
             <p class="portfolio-list-text">App</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
             <img class="portfolio-list-image" src="./images/img-6.jpg" alt="Cashless Payment" width="360" height="300">
+            <div class="portfolio-st">
             <h3 class="portfolio-list-title">Cashless Payment</h3>
             <p class="portfolio-list-text">Marketing</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
             <img class="portfolio-list-image" src="./images/img-7.jpg" alt="Meditation App" width="360" height="300">
+            <div class="portfolio-st">
             <h3 class="portfolio-list-title">Meditation App</h3>
             <p class="portfolio-list-text">App</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
             <img class="portfolio-list-image" src="./images/img-8.jpg" alt="Taxi Service" width="360" height="300">
+            <div class="portfolio-st">
             <h3 class="portfolio-list-title">Taxi Service</h3>
             <p class="portfolio-list-text">Marketing</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
             <img class="portfolio-list-image" src="./images/img-9.jpg" alt="Screen Illustrations" width="360" height="300">
+            <div class="portfolio-st">
             <h3 class="portfolio-list-title">Screen Illustrations</h3>
             <p class="portfolio-list-text">Design</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
             <img class="portfolio-list-image" src="./images/img-10.jpg" alt="Online Courses" width="360" height="300">
+            <div class="portfolio-st">
             <h3 class="portfolio-list-title">Online Courses</h3>
             <p class="portfolio-list-text">Marketing</p>
+            </div>
             </li>
         </ul> 
         </div>
