--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </section>
 
         <section class="topics">
+            <div class="container">
             <h2 class="visually-hidden">Topics</h2>
             <ul class="topics-menu">
                 <li class="topics-menu-list">
