--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="container">
             <h1 class="solution-title">Effective Solutions for Your Business</h1>
             <button class="solution-button" type="button">Order Service</button>
+            </div>
         </section>
 
         <section class="topics">
