--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container header-container">
         <nav class="navigation">
-            <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+            <a class="logo logo-header" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul class="nav-list">
                 <li><a class="nav-link" href="./index.html">Studio</a></li>
                 <li><a class="nav-link" href="">Portfolio</a></li>
@@ -102,7 +102,7 @@
         </section>
 
         <section class="container-portfolio">
-        <div class="container portfolio-class">
+        <div class="container ">
         <h2 class="portfolio">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-list-item">
@@ -154,7 +154,7 @@
 
     <footer class="foot">
         <div class="container">
-        <a class="logo-footer" href="./index.html">Web<span class="logo-part-foot">Studio</span></a>
+        <a class="logo logo-footer" href="./index.html">Web<span class="logo-part-foot">Studio</span></a>
         <p class="foot-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
